# coco

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  INSTALL.md  LICENSE.txt  README.md  TODO.txt  config.cmake.in  new_config_template.xml  new_launcher.mdj  new_launcher.txt  notes.txt  sample_config_file.xml  scancomp.py
.github/workflows/: cmake.yml
app/: CMakeLists.txt  cocoARapp.cpp  config.xml  ezoroapp.cpp  ezoroc1.cpp  ezoroc2.cpp
cocoaine/: coco.css  coco.js  datatables.min.js  index.html  jquery-ui.min.css  jquery-ui.min.js
cocoedit/: notes.txt
core/: CMakeLists.txt  coco.h  core.cpp  core.h  core_impl.hpp  impl.hpp  register.cpp  register.h  web_server.cpp  web_server.h
core/include/coco/: connection.h  connection_impl.hpp  core.h  core_impl.hpp  execution.h  platform.h  register.h  task.h  task_impl.hpp  web_server.h
core/include/coco/util/: accesses.hpp  generics.hpp  impl.hpp  linux_sched.h  logging.h  memory.hpp  threading.h  timing.h
core/include/coco/web_server/: web_server.h
core/src/: connection.cpp  core.cpp  execution.cpp  logging.cpp  register.cpp  task.cpp  web_server.cpp
debian/: changelog  coco-dev.install  coco.install  control  files  old_rules  rules
doc/: Doxyfile.in  TODO.txt  commits.txt  components.plantuml
doc/html/: annotated.html  classcoco_1_1_activity-members.html  classcoco_1_1_activity.html  classcoco_1_1_attribute-members.html  classcoco_1_1_attribute.html  classcoco_1_1_attribute_base-members.html  classcoco_1_1_attribute_base.html  classcoco_1_1_component_registry-members.html  classcoco_1_1_component_registry.html  classcoco_1_1_component_spec-members.html  classcoco_1_1_component_spec.html  classcoco_1_1_connection_base-members.html  classcoco_1_1_connection_base.html  classcoco_1_1_connection_buffer_l-members.html  classcoco_1_1_connection_buffer_l.html  classcoco_1_1_connection_buffer_u-members.html  classcoco_1_1_connection_buffer_u.html  classcoco_1_1_connection_data_l-members.html  classcoco_1_1_connection_data_l.html  classcoco_1_1_connection_data_u-members.html  classcoco_1_1_connection_data_u.html  classcoco_1_1_connection_manager-members.html  classcoco_1_1_connection_manager.html  classcoco_1_1_connection_t-members.html  classcoco_1_1_connection_t.html  classcoco_1_1_execution_engine-members.html  classcoco_1_1_execution_engine.html  classcoco_1_1_input_port-members.html  classcoco_1_1_input_port.html  classcoco_1_1_operation-members.html  classcoco_1_1_operation.html  classcoco_1_1_operation_base-members.html  classcoco_1_1_operation_base.html  classcoco_1_1_output_port-members.html  classcoco_1_1_output_port.html  classcoco_1_1_parallel_activity-members.html  classcoco_1_1_parallel_activity.html  classcoco_1_1_port_base-members.html  classcoco_1_1_port_base.html  classcoco_1_1_property-members.html  (+43 more)
doc/latex/: annotated.tex  classcoco_1_1_activity.eps  classcoco_1_1_activity.tex  classcoco_1_1_attribute.eps  classcoco_1_1_attribute.tex  classcoco_1_1_attribute_base.eps  classcoco_1_1_attribute_base.tex  classcoco_1_1_component_registry.tex  classcoco_1_1_component_spec.tex  classcoco_1_1_connection_base.eps  classcoco_1_1_connection_base.tex  classcoco_1_1_connection_buffer_l.eps  classcoco_1_1_connection_buffer_l.tex  classcoco_1_1_connection_buffer_u.eps  classcoco_1_1_connection_buffer_u.tex  classcoco_1_1_connection_data_l.eps  classcoco_1_1_connection_data_l.tex  classcoco_1_1_connection_data_u.eps  classcoco_1_1_connection_data_u.tex  classcoco_1_1_connection_manager.tex  classcoco_1_1_connection_t.eps  classcoco_1_1_connection_t.tex  classcoco_1_1_execution_engine.eps  classcoco_1_1_execution_engine.tex  classcoco_1_1_input_port.eps  (+49 more)
experimental/: README.md  cocoxx.hpp  cocoxx1.cpp
include/: CMakeLists.txt  coco.h  web_server_task.h
launcher/: CMakeLists.txt  data_handler.h  graph_launcher.cpp  graph_loader.cpp  graph_loader.h  graph_spec.h  input_parser.h  launcher.cpp  library_parser.cpp  library_parser.h  loader.cpp  loader.h  web_server.cpp  web_server.h  xml_creator.cpp  xml_creator.h  xml_parser.cpp  xml_parser.h
launcher/include/: graph_loader.h  graph_spec.h  input_parser.h  library_inspection.h  library_parser.h  xml_creator.h  xml_parser.h
launcher/include/legacy/: loader.h
launcher/legacy/: launcher.cpp  loader.cpp  loader.h
launcher/scripts/: xcoco_launcher  xcoco_launcher.cmd  xcoco_launcher.py
launcher/src/: graph_launcher.cpp  graph_loader.cpp  library_parser.cpp  new_graph_launcher.cpp  xml_creator.cpp  xml_parser.cpp
launcher/src/legacy/: loader.cpp
ros_launcher/: log2.txt
samples/: .gitignore  CMakeLists.txt  cocoapp.cpp  cocoapp2.cpp  cococ1.cpp  cococ2.cpp  cocolaunch.cpp  component_1.cpp  component_2.cpp  config.xml  config_pipeline.xml  ezoroapp.cpp  ezoroapp2.cpp  ezoroc1.cpp  ezoroc2.cpp  legacy_config.xml  pipeline_comps.cpp  test.xml
samples/launch_files/: config.xml  config_arg_streamer.xml  config_farm.xml  config_include.xml  config_latency.xml  config_pipeline.xml  log2.txt
samples/src/: component_1.cpp  component_1.def  component_2.cpp  component_2.def  component_latency.cpp  pipeline_comps.cpp
schema/: coco.xsd  kinect_streamer.xml  validator.py
scripts/: xml_creator.py
src/: CMakeLists.txt  coco.h  coco_core.cpp  coco_core.hpp  coco_impl.hpp  coco_launcher.cpp  coco_launcher.h  coco_logging.cpp  coco_logging.h  coco_logging.hpp  coco_profiling.cpp  coco_profiling.h  coco_register.cpp  coco_register.h  coco_rt.cpp  coco_timing.cpp  coco_timing.h  core.cpp  core.h  core_impl.hpp  ezoro.cpp  ezoro.hpp  impl.hpp  log_config_file.txt  register.cpp  register.h
tools/: sourceparse.py
util/: CMakeLists.txt  logging.cpp  logging.h  profiling.cpp  profiling.h  timing.cpp  timing.h
web_viewer/: .gitignore  coco.css  coco.js  datatables.min.css  jquery-ui.min.js
xml_templates/: CollisionDetectionTask.xml  FlannIndexTask.xml  FrameHandlerTask.xml  GLManagerTask.xml  GLObjApp.xml  LeapControllerTask.xml  ReceiverTask.xml  ServerTask.xml  UDPCollisionDataTask.xml  UDPHMDDataTask.xml  UDPReceiverTask.xml
(+148 files in other folders)
