
set(UTIL_SOURCE_FILE ${CMAKE_CURRENT_LIST_DIR}/logging.cpp
					 ${CMAKE_CURRENT_LIST_DIR}/timing.cpp
    )
set(UTIL_INCLUDE_FILE ${CMAKE_CURRENT_LIST_DIR}/logging.h
					  ${CMAKE_CURRENT_LIST_DIR}/timing.h
    )

if(STATIC_BUILD)
	add_library(coco_util ${UTIL_SOURCE_FILE} ${UTIL_INCLUDE_FILE})
else()
	add_library(coco_util SHARED ${UTIL_SOURCE_FILE} ${UTIL_INCLUDE_FILE})
endif()

install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
install(TARGETS coco_util DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/include/coco/util)
install(FILES ${UTIL_INCLUDE_FILE} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/coco/util)
